# opcua-labview

./: .gitignore  README.md  license-CC0.md  opcua.lvproj
opcua-demo/: Demo-Browse.vi  Demo-Browse2.vi
opcua-demo/pki/own/: cert.der
opcua-demo/pki/private/: private.pem
opcua-dll/: Cargo.toml  build.cmd  build.rs  build32.cmd  build64.cmd
opcua-dll/.cargo/: config.toml
opcua-dll/src/: browser.rs  client.rs  client_variables.rs  errors.rs  labview.rs  lib.rs  runtime.rs  server.rs  server_variables.rs  utils.rs
opcua-lvlib/: opcua.lvlib
opcua-lvlib/Browser/: Browser Core.lvlib  Error Codes.txt
opcua-lvlib/Browser/Node Classes/Generic Node/: Add To Child List.vi  Generic Node.lvclass  Read Children.vi  Read Display Name.vi  Read Parent UID.vi  Read UID.vi  Remove From Child List.vi  Write Children.vi  Write Display Name.vi  Write Parent UID.vi  Write UID.vi
opcua-lvlib/Browser/Node Classes/UA Node/: Node Class.ctl  Read node type.vi  (+2 more)
opcua-lvlib/Client/: Browse.vi  Builder.vi  Client.lvclass  Connect(config).vi  Connect.vi  DisConnect.vi  GetNodeInfo.vi  readVariable_Bool.vi  readVariable_DBL.vi  readVariable_I32.vi
opcua-lvlib/Server/: AddFolder.vi  AddVariable.vi  Builder.vi  IsServerRunning.vi  Server.lvclass  StartServer.vi  StopServer.vi  WriteVariable.vi  WriteVariableDBL.vi  WriteVariableI32.vi
opcua-lvlib/SubVIs/: Error Converter (ErrCode or Status).vi
opcua-lvlib/TypeDefs/: Data Type.ctl  Node.ctl
opcua-rust/: Cargo.toml
opcua-rust/async-opcua-server/src/: server.rs
opcua-rust/async-opcua-types/src/: expanded_node_id.rs
(+32 files in other folders)
